# Performance-of-Practical-GOT

./: README.md
circom/: random.circom
ecc_exp_test/: Cargo.toml
ecc_exp_test/src/: main.rs
legogro16/src/: test.rs
legogro16/tests/: mimc.rs  test_large_circuit2.rs
